option(ENABLE_TEST "Enable Unit Tests" OFF)
if(ENABLE_TEST AND NOT STORMBYTE_AS_DEPENDENCY)
	add_executable(FFMpegTests ffmpeg_test.cxx)
	target_link_libraries(FFMpegTests Alchemy)
	add_test(NAME FFMpegTests COMMAND FFMpegTests)
	#set_tests_properties(FFMpegTests PROPERTIES WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/test)
endif()